--- a/IHaveToFly/app/src/main/AndroidManifest.xml
+++ b/IHaveToFly/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.noActionBar"/>
+        <activity
+            android:name=".GameActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.noActionBar" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.noActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
