--- a/GuardaRedes/Assembly-CSharp.csproj
+++ b/GuardaRedes/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\ButtonInstrucoes.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GameScore.cs" />
      <Compile Include="Assets\Scripts\MyButton.cs" />
