--- a/JumpTheRope/Assembly-CSharp.csproj
+++ b/JumpTheRope/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ButtonJogar.cs" />
     <Compile Include="Assets\Scripts\DoubleClickChecker.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameScore.cs" />
