--- a/JumpTheRope/Assembly-CSharp.csproj
+++ b/JumpTheRope/Assembly-CSharp.csproj
@@ -60,11 +60,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ButtonClose.cs" />
     <Compile Include="Assets\Scripts\ButtonJogar.cs" />
     <Compile Include="Assets\Scripts\DoubleClickChecker.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameScore.cs" />
-    <Compile Include="Assets\Scripts\PlayerControlSwipe.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Android-Projects/JumpTheRope/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
