Guarda Redes -> Inicio deteção swipes L

--- a/GuardaRedes/Assembly-CSharp.csproj
+++ b/GuardaRedes/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\ButtonHome.cs" />
     <Compile Include="Assets\Scripts\ButtonInstrucoes.cs" />
     <Compile Include="Assets\Scripts\ButtonIntroducao.cs" />
+    <Compile Include="Assets\Scripts\Configuration.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameScore.cs" />
     <Compile Include="Assets\Scripts\MyButton.cs" />
